# respec-ai

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.server.toml  pyproject.toml  regenerate_templates.py
.codex/plans/: ACTIVE.md  codex-model-manual-selection.md  composite-score-blocker-contract-cleanup.md  grounded-code-patch-agent-evidence-contract.md  official-api-research-slug-marker-validation.md  patch-request-inference.md  workflow-guidance-context-threading.md
.github/workflows/: release.yml  update-homebrew-formula.yml
.respec-ai/: config.json
docs/: AGENT_DEVELOPMENT_GUIDELINES.md  ARCHITECTURE.md  BUILD_WORKFLOW_IMPLEMENTATION_PLAN.md  CLI_GUIDE.md  DATABASE_STATE_MANAGER.md  DOCKER_DEPLOYMENT.md  MCP_MEMORY_FUTURE_FEATURES.md  MULTI_PROJECT_DESIGN.md  OPENCODE_INVOCATION_SPEC.md  PLAN_WORKFLOW_PATTERNS.md  SETUP_IMPROVEMENTS.md  TEMPLATE_AUDIT.md  TESTPYPI_PUBLISHING.md  TROUBLESHOOTING_DATABASE.md  USER_GUIDE.md  WINDOWS_COMPATIBILITY.md  WORKFLOWS.md  WORKFLOW_REFACTORING_LESSONS.md  coding-standards-template.md
docs/agents/: spec-architect.md  spec-critic.md
docs/commands/: specter-build.md  specter-roadmap.md  specter-spec.md
docs/future_features/: GITHUB_LINEAR_FUTURE_IMPLEMENTATION.md
migrations/: 000_init_test_db.sql  001_initial_schema.sql  002_add_indexes.sql  003_fix_roadmap_schema.sql  004_fix_spec_id_type.sql  005_add_task_breakdown_and_fix_loop_types.sql  006_add_tasks_table.sql  007_fix_duplicate_phase_name.sql  008_rename_technical_specs_to_phases.sql  009_add_active_column_to_phases.sql  010_rename_project_name_to_plan_name.sql  011_rename_project_status_to_plan_status.sql  012_add_active_column_to_tasks.sql  013_consolidate_task_model.sql  014_add_implementation_checklist.sql  015_add_review_sections_table.sql  016_add_additional_sections_to_plans.sql  017_drop_loop_history_table.sql  018_restructure_plans_table.sql  019_consolidate_plan_h2_fields.sql  020_add_task_research_and_additional_sections.sql  020_consolidate_task_h2_fields.sql  021_add_roadmap_additional_sections.sql  022_add_phase_additional_h3_fields.sql  023_add_unified_feedback_tables.sql  024_add_reviewer_results_tables.sql  025_repair_empty_blocker_placeholders.sql  026_add_reviewer_result_max_score.sql  README.md
scripts/: README.md  build.sh  complete_command_parameterization.py  entrypoint.sh  generate_templates.py  install-respec-ai.sh  install-specter.sh  migrate.py  release.py  reset_database.sh  run_opencode_model.py  run_opencode_sync.py  setup-test-db.sh  update_agent_project_path.py  update_homebrew_formula.py  update_template_mcp_calls.py  validate_tool_references.py
services/cli/: setup.py
services/mcp/: server.py
services/mcp/tools/: build_plan_tools.py  feedback_tools_unified.py  loop_tools.py  project_plan_tools.py  roadmap_tools.py  spec_tools.py
services/models/: base.py  plan_completion_report.py  roadmap.py  spec.py
services/platform/: models.py  platform_orchestrator.py  startup_validation.py  template_coordinator.py  template_helpers.py  tool_discovery.py  tool_enums.py  tool_registry.py
services/platform/command_strategies/: build_strategy.py  plan_conversation_strategy.py  plan_strategy.py  roadmap_strategy.py  spec_strategy.py
services/templates/agents/: analyst_critic.py  build_coder.py  build_critic.py  build_planner.py  build_reviewer.py  create_spec.py  plan_analyst.py  plan_critic.py  roadmap.py  roadmap_critic.py
services/templates/commands/: __init__.py  build_command.py  plan_command.py  plan_conversation_command.py  roadmap_command.py  spec_command.py
services/utils/: errors.py  loop_state.py  setting_configs.py  state_manager.py
src/: shared.py
src/cli/: main.py  setup.py
src/cli/commands/: cleanup.py  codex_model.py  db.py  docker.py  fetch_models.py  init.py  mcp_server.py  models.py  opencode_model.py  opencode_sync.py  platform.py  rebuild.py  regenerate.py  register_mcp.py  standards.py  status.py  unregister_mcp.py  update.py  upgrade.py  validate.py
src/cli/config/: claude_config.py  codex_config.py  global_config.py  ide_constants.py  package_info.py  version_manager.py
src/cli/docker/: __init__.py  manager.py
src/cli/services/: __init__.py  tui_model_setup.py
src/cli/standards/: upgrader.py
src/cli/ui/: console.py  formatters.py  stack_prompts.py
src/mcp/: __main__.py  lifespan.py  server.py
src/mcp/tools/: __init__.py  base.py  build_plan_tools.py  document_tools.py  feedback_tools_unified.py  loop_tools.py  phase_tools.py  plan_completion_report_tools.py  plan_tools.py  project_plan_tools.py  (+4 more)
src/models/: __init__.py  base.py  build_plan.py  conversation_context.py  enums.py  feature_requirements.py  feedback.py  phase.py  plan.py  plan_completion_report.py  project_plan.py  roadmap.py  task.py
src/platform/: __init__.py  config_manager.py  config_writer.py  models.py  path_constants.py  platform_orchestrator.py  platform_selector.py  reviewer_mapping.py  standards_config.py  startup_validation.py  template_coordinator.py  template_generator.py  template_helpers.py  tool_discovery.py  tool_doc_extractor.py  tool_doc_generator.py  tool_enums.py  tool_registry.py  tooling_defaults.py  tui_selector.py
src/utils/: database_pool.py  enums.py  errors.py  loop_state.py  setting_configs.py  state_manager.py
tests/: conftest.py
tests/e2e/: test_production_mcp_server.py  test_respec_ai_setup.py  test_specter_setup.py
tests/integration/: conftest.py  test_build_plan_tools_integration.py  test_fastmcp_server.py  test_loop_performance.py  test_loop_tools_integration.py  test_markdown_platform_scoping.py  test_phase_storage_fix.py  test_phase_workflow_research_validation.py  test_plan_completion_report_integration.py  test_roadmap_storage_integration.py  test_spec_selection.py  test_state_manager_model_roundtrip.py  test_unified_feedback_tools_persistence.py
tests/unit/: test_shared.py
(+187 files in other folders)
