[project]
name = "respec-ai"
version = "0.4.3"
description = "RespecAI CLI - Lightweight manager for Docker-based specification-driven development workflow"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [{ name = "Mark McClatchy" }]

keywords = [
    "ai",
    "claude",
    "mcp",
    "workflow",
    "automation",
    "specification",
    "respec-ai",
    "spec-driven-development",
    "spec driven development",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "rich>=14.1.0,<15.0.0",
    "markdown-it-py>=3.0.0",
    "docker>=7.1.0,<8.0.0",
]

[project.urls]
Homepage = "https://github.com/mmcclatchy/respec-ai"
Documentation = "https://github.com/mmcclatchy/respec-ai/blob/main/docs/USER_GUIDE.md"
Repository = "https://github.com/mmcclatchy/respec-ai"
Issues = "https://github.com/mmcclatchy/respec-ai/issues"

[dependency-groups]
dev = [
    "mypy >=1.17.1,<2.0.0",
    "pytest >=8.4.2,<9.0.0",
    "pytest-asyncio >=1.1.0,<2.0.0",
    "pytest-mock >=3.15.0,<4.0.0",
    "types-pyyaml >=6.0.12.20250809,<7.0.0",
    "types-aiofiles >=24.1.0.20250822,<25.0.0",
    "autoimport>=1.6.1",
    "pytest-env>=1.2.0",
    "twine>=6.2.0",
    "ruff>=0.14.8",
    "types-docker>=7.1.0.20251202",
]
server = [
    "fastmcp>=2.13.3,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "src/__init__.py",
    "src/shared.py",
    "src/cli",
    "src/models",
    "src/platform",
    "src/utils",
]

[project.scripts]
respec-ai = "src.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
log_cli_level = "WARNING"
log_level = "WARNING"
log_file = "logs/pytest.log"
log_file_level = "WARNING"
env = ["MCP_LOG_LEVEL=WARNING", "MCP_LOG_FILE=", "FSDD_MCP_LOG_LEVEL=WARNING"]
filterwarnings = [
    # Suppress coroutine warnings in MCP server tests - these are expected due to async mocking
    "ignore:coroutine.*was never awaited:RuntimeWarning:.*test_mcp_server.*",
    # Suppress pytest cleanup warnings for unawaited coroutines during garbage collection
    "ignore:.*coroutine.*main.*was never awaited.*",
]
markers = [
    "agent_coordination: marks tests for agent coordination and parameter passing",
    "error_injection: marks tests for error injection and failure scenarios",
    "golden_dataset: marks tests for golden dataset regression testing",
    "integration: marks tests for integration testing across multiple components",
    "mcp_orchestration: marks tests for MCP server orchestration and workflow validation",
    "workflow_state: marks tests for workflow state management and failure recovery",
]
pythonpath = ["."]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.lock",
    "src/models/descriptions.py",
]

line-length = 120
indent-width = 4

# Assume Python 3.8
# target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = [
    "D",    # Disable all Docstring rules
    "E741", # Disable errors on single letter variable names. Allowing them for list comprehensions.
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
show_column_numbers = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
warn_incomplete_stub = false
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_error_context = true
disallow_subclassing_any = true
implicit_optional = false
incremental = false
strict_optional = true
strict = false
warn_unreachable = false
explicit_package_bases = true
namespace_packages = true

plugins = [
    "pydantic.mypy",
    # "sqlalchemy.ext.mypy.plugin",
]

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true
