[project]
name = "respec-ai"
version = "0.15.2"
description = "respec-ai CLI - Lightweight manager for Docker-based specification-driven development workflow"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [{ name = "Mark McClatchy" }]

keywords = [
    "ai",
    "claude",
    "mcp",
    "workflow",
    "automation",
    "specification",
    "respec-ai",
    "spec-driven-development",
    "spec driven development",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "rich>=14.1.0,<15.0.0",
    "markdown-it-py>=3.0.0",
    "docker>=7.1.0,<8.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "fastmcp>=3.0.0,<4.0.0",
    "exa-py>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mmcclatchy/respec-ai"
Documentation = "https://github.com/mmcclatchy/respec-ai/blob/main/docs/CLI_GUIDE.md"
Repository = "https://github.com/mmcclatchy/respec-ai"
Issues = "https://github.com/mmcclatchy/respec-ai/issues"

[dependency-groups]
dev = [
    "pytest >=8.4.2,<9.0.0",
    "pytest-asyncio >=1.1.0,<2.0.0",
    "pytest-mock >=3.15.0,<4.0.0",
    "types-pyyaml >=6.0.12.20250809,<7.0.0",
    "types-aiofiles >=24.1.0.20250822,<25.0.0",
    "autoimport>=1.6.1,<2.0.0",
    "pytest-env>=1.2.0,<2.0.0",
    "ruff>=0.14.8,<1.0.0",
    "types-docker>=7.1.0.20251202,<8.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "asyncpg-stubs>=0.31.1,<1.0.0",
    "ty>=0.0.19,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
respec-ai = "src.cli.main:main"
respec-server = "src.mcp.server:run_local_server"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
log_cli_level = "WARNING"
log_level = "WARNING"
log_file = "logs/pytest.log"
log_file_level = "WARNING"
env = [
    "MCP_LOG_LEVEL=WARNING",
    "MCP_LOG_FILE=",
    "FSDD_MCP_LOG_LEVEL=WARNING",
    "TESTING=true",
    "DATABASE_POOL_MIN_SIZE=1",
    "DATABASE_POOL_MAX_SIZE=4",
]
filterwarnings = [
    # Suppress coroutine warnings in MCP server tests - these are expected due to async mocking
    "ignore:coroutine.*was never awaited:RuntimeWarning:.*test_mcp_server.*",
    # Suppress pytest cleanup warnings for unawaited coroutines during garbage collection
    "ignore:.*coroutine.*main.*was never awaited.*",
    # Suppress Rich library Jupyter support warning (we don't use Jupyter notebooks)
    "ignore:install \"ipywidgets\" for Jupyter support:UserWarning:rich.live",
    # Suppress pytest-mock context manager warning (informational only)
    "ignore:Mocks returned by pytest-mock do not need to be used as context managers:pytest_mock.PytestMockWarning",
]
markers = [
    "agent_coordination: marks tests for agent coordination and parameter passing",
    "error_injection: marks tests for error injection and failure scenarios",
    "golden_dataset: marks tests for golden dataset regression testing",
    "integration: marks tests for integration testing across multiple components",
    "mcp_orchestration: marks tests for MCP server orchestration and workflow validation",
    "workflow_state: marks tests for workflow state management and failure recovery",
]
pythonpath = ["."]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.lock",
    "src/models/descriptions.py",
]

line-length = 120
indent-width = 4

# Assume Python 3.8
# target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# ANN: flake8-annotations (type hint enforcement, replacing mypy's disallow_untyped_defs)
select = ["E4", "E7", "E9", "F", "ANN"]
ignore = [
    "D",      # Disable all Docstring rules
    "E741",   # Disable errors on single letter variable names. Allowing them for list comprehensions.
    "ANN204", # Missing return type annotation for __init__ (overly pedantic)
    "ANN401", # Dynamically typed expressions (Any) disallowed (too strict for introspection code)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
# Python version is auto-detected from project.requires-python

[tool.ty.src]
# Include source directories to check
include = ["src", "tests"]

# Exclude patterns (similar to ruff exclusions)
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.lock",
    "src/models/descriptions.py",
]

respect-ignore-files = true

[tool.ty.rules]
# Set default rule severity (ty is strict by default, similar to mypy strict mode)
# Override specific rules as needed
unused-type-ignore-comment = "warn"

[tool.ty.analysis]
# Respect type: ignore comments (equivalent to mypy behavior)
respect-type-ignore-comments = true

[tool.ty.terminal]
# Show errors on warnings for strict checking
error-on-warning = false
output-format = "full"

# Override rules for test files (ignore pytest decorator false positives)
[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
# Ignore pytest.skip/fail decorator-wrapped function signature false positives
invalid-argument-type = "ignore"
too-many-positional-arguments = "ignore"
# Ignore unknown-argument in tests (used to test validation)
unknown-argument = "ignore"
